/*
 * Copyright (c) 2026 Bob Hablutzel. All rights reserved.
 *
 * Licensed under a dual-license model: freely available for non-commercial use;
 * commercial use requires a separate license. See LICENSE file for details.
 * Contact license@geastalt.com for commercial licensing.
 */

syntax = "proto3";

package com.geastalt.lock.raft;

option java_multiple_files = true;
option java_package = "com.geastalt.lock.raft.generated";
option java_outer_classname = "RaftServiceProto";

// Raft consensus service for intra-cluster communication
service RaftService {
    // Request a vote during leader election
    rpc RequestVote(VoteRequest) returns (VoteResponse);

    // Append entries (heartbeat or log replication)
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
}

message VoteRequest {
    // Candidate's term
    int64 term = 1;

    // Candidate requesting vote
    string candidate_id = 2;

    // Index of candidate's last log entry
    int64 last_log_index = 3;

    // Term of candidate's last log entry
    int64 last_log_term = 4;
}

message VoteResponse {
    // Current term, for candidate to update itself
    int64 term = 1;

    // True means candidate received vote
    bool vote_granted = 2;

    // ID of the voter
    string voter_id = 3;
}

message AppendEntriesRequest {
    // Leader's term
    int64 term = 1;

    // Leader's ID so follower can redirect clients
    string leader_id = 2;

    // Index of log entry immediately preceding new ones
    int64 prev_log_index = 3;

    // Term of prev_log_index entry
    int64 prev_log_term = 4;

    // Log entries to store (empty for heartbeat)
    repeated LogEntryProto entries = 5;

    // Leader's commit index
    int64 leader_commit = 6;
}

message AppendEntriesResponse {
    // Current term, for leader to update itself
    int64 term = 1;

    // True if follower contained entry matching prev_log_index and prev_log_term
    bool success = 2;

    // The follower's last log index (for fast catch-up)
    int64 match_index = 3;

    // ID of the follower
    string follower_id = 4;
}

message LogEntryProto {
    // Log index
    int64 index = 1;

    // Term when entry was received by leader
    int64 term = 2;

    // Type of entry
    LogEntryTypeProto type = 3;

    // Serialized command data
    bytes data = 4;
}

enum LogEntryTypeProto {
    LOG_ENTRY_TYPE_UNSPECIFIED = 0;
    LOG_ENTRY_TYPE_NOOP = 1;
    LOG_ENTRY_TYPE_ACQUIRE_LOCK = 2;
    LOG_ENTRY_TYPE_RELEASE_LOCK = 3;
    LOG_ENTRY_TYPE_EXTEND_LOCK = 4;
}
